# Argo-seaglider-reproduce

./: .gitignore  README.md  model.py  pyproject.toml  time_series_viz.py
data/: DATA_INVENTORY.md  fetch_all.py  fetch_argo.py  fetch_goship.py  fetch_seaglider.py  fetch_zenodo.py
preprocess/: __init__.py  pipeline.py
test/: test_features.py  test_mld.py  test_model.py  test_pipeline.py  test_teos10.py
utils/: __init__.py  features.py  mld.py  teos10.py
