[project]
name = "rf-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argopy>=1.4.0",
    "copernicusmarine>=2.4.1",
    "earthaccess>=0.18.0",
    "gsw>=3.6.21",
    "joblib>=1.5.3",
    "netcdf4>=1.7.4",
    "pandas>=3.0.3",
    "pyleoclim>=1.3.0",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.1",
    "xarray>=2025.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
